Began work on terms

--- a/app/assets/stylesheets/administrate/application.scss
+++ b/app/assets/stylesheets/administrate/application.scss
@@ -3,6 +3,7 @@
 @import 'reset/normalize';
 
 @import 'utilities/variables';
+@import 'utilities/overrides';
 @import 'utilities/text-color';
 
 @import 'selectize';
