Added terms and privacy

--- a/app/views/public/privacy.erb
+++ b/app/views/public/privacy.erb
@@ -1,1 +1,10 @@
-<h2>Privacy</h2>
+<div class="medium-12 column login">
+    <h2 class="hero__title" style="font-size: 4rem; margin-bottom: 0.5em;">Privacy Policy</h2>
+    <p style="font-size:2em;">
+        At Ongair ("Ongair"), we recognize the importance of privacy and are committed to maintaining the accuracy, 
+        confidentiality and security of your personal information. This Privacy Policy describes the
+        personal information that Ongair collects from any User of our services, how we manage that personal
+        information and what may happen to that personal information. Ongair is responsible for the personal
+        information that we collect and store.
+    </p>
+</div>
