--- a/app/views/public/terms.erb
+++ b/app/views/public/terms.erb
@@ -1,1 +1,23 @@
-<h2>Terms</h2>
+<div class="medium-12 column login">
+    <h2 class="hero__title" style="font-size: 4rem; margin-bottom: 0.5em;">Terms & Conditions</h2>
+    <p style="font-size:2em;">
+        The following terms and conditions govern all use of the Ongair website ("the Website") and all
+        products and services offered by Ongair. The Website is offered subject to the User’s acceptance
+        without modification of all of the terms and conditions contained herein and all other operating rules,
+        policies (including, where applicable, the Ongair Privacy Policy) and procedures that may be
+        published from time to time on the Website by Ongair (collectively, the "Agreement").
+        Please read these terms and conditions carefully before accessing or using the Website. By accessing or
+        using any part of the Website, the User agrees to become bound by these terms and conditions. If
+        these terms and conditions are considered an offer by Ongair, acceptance is expressly limited to these
+        terms.
+    </p>
+    <br />
+
+    <h3 class="hero__title" style="font-size: 2rem; margin-bottom: 0.5em;">Terms & Conditions</h2>
+    <p style="font-size:2em;">
+        Subject to these terms and conditions, the Services are solely for User's particular and sole use. As used
+        herein, "User" includes Ongair's paying customers ("Customers"). These terms set forth certain terms
+        and conditions that apply to Customers, but not other Users. In the event any Customer-specific terms
+        or conditions conflict with any of the terms or conditions that apply to Users generally, the Customerspecific terms and conditions shall prevail.
+    </p>
+</div>
