--- a/app/views/public/terms.erb
+++ b/app/views/public/terms.erb
@@ -13,11 +13,65 @@
     </p>
     <br />
 
-    <h3 class="hero__title" style="font-size: 2rem; margin-bottom: 0.5em;">Terms & Conditions</h2>
+    <h3 class="hero__title" style="font-size: 2rem; margin-bottom: 0.5em;">Access to the User’s Account</h2>
     <p style="font-size:2em;">
         Subject to these terms and conditions, the Services are solely for User's particular and sole use. As used
         herein, "User" includes Ongair's paying customers ("Customers"). These terms set forth certain terms
         and conditions that apply to Customers, but not other Users. In the event any Customer-specific terms
         or conditions conflict with any of the terms or conditions that apply to Users generally, the Customerspecific terms and conditions shall prevail.
+
+        <br /><br />
+        Subject to issuing a two (2) week notice, Ongair may change, suspend or discontinue the Services at any time, including the availability of any
+        feature, database, or content. Ongair may however impose limits on certain features and services or restrict
+        User's access to parts or all of the Services without notice or incurring any liability from the User provided that such limitation shall not last
+        for a period beyond 72 hours;upon which Ongair shall either issue the two (2) week notice or reinstate the Services immediately.
+    </p>
+    <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Restrictions</h2>
+    <p style="font-size:2em;">
+        User shall not attempt to gain unauthorized access to any portion or feature of the Service, or any
+        other systems or networks connected to the Service or to any Ongair server, or to any of the services
+        offered on or through the Service, by hacking, password "mining", or any other illegitimate means.
+
+        <br /><br />
+        Subject to issuing a two (2) week notice, Ongair may change, suspend or discontinue the Services at any time, including the availability of any
+        feature, database, or content. Ongair may however impose limits on certain features and services or restrict
+        User's access to parts or all of the Services without notice or incurring any liability from the User provided that such limitation shall not last
+        for a period beyond 72 hours;upon which Ongair shall either issue the two (2) week notice or reinstate the Services immediately.
+    </p>
+
+    <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Registration and Security</h2>
+    <p style="font-size:2em;">
+    As a condition to using certain products and services of the Service, User may be required to register
+    with Ongair and select a password. User shall provide Ongair with accurate, complete, and updated
+    registration information. Failure to do so shall constitute a breach of these terms, which may result in
+    immediate termination of User's account. Ongair reserves the right to refuse registration of, or cancel
+    any Ongair User at its discretion. User shall be responsible for maintaining the confidentiality of User's
+    Ongair password and other account information.
+    </p>
+
+    <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Termination</h2>
+    <p style="font-size:2em;">
+    Subject to issuing a two (2) week notice and the clause on 'Access to the User's Ongair Account' above,
+						Ongair may terminate User access to all or any part of the Website or Service at any time, with or
+						without cause, with or without notice, effective immediately. If User wishes to terminate its
+						Agreement or its Ongair User account (where assigned), User may discontinue using the Website.
+						Notwithstanding the foregoing, paid accounts can only be terminated by Ongair where there has been
+						a material breach of the Agreement with Ongair and such breach has not been cured within thirty
+						(30) days of notice by Ongair of such breach; provided that, Ongair reserves the right to terminate the
+						Website immediately as part of a general shut down of the services offered. All provisions of such
+						Agreement and these terms, which by their nature should survive termination, shall survive
+						termination, including, without limitation, ownership provisions, indemnity
+						and limitations of liability.
+    </p>
+    <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Assignment</h2>
+    <p style="font-size:2em;">
+    Customer will not assign its use/licence and these terms and conditions to any third party
+							without Ongair’s prior written consent, which consent will not be unreasonably withheld. Ongair
+							may assign its obligations or any rights under this terms and conditions to any third party without
+							Customer’s consent in connection with any merger or change of control of Ongair or the sale of all or
+							substantially all of Ongair’s assets provided that any such successor agrees to fulfil its obligations
+							pursuant to these terms and conditions. Any assignment in violation of this Section will be void. These
+							terms and conditions will be binding upon permitted assignees. These terms will inure to the benefit
+							of and be binding upon the Parties, their permitted successors and permitted assignees.
     </p>
 </div>
