--- a/app/views/public/privacy.erb
+++ b/app/views/public/privacy.erb
@@ -5,6 +5,33 @@
         confidentiality and security of your personal information. This Privacy Policy describes the
         personal information that Ongair collects from any User of our services, how we manage that personal
         information and what may happen to that personal information. Ongair is responsible for the personal
-        information that we collect and store.
+        information that we collect and store.<br /><br />
+    </p>
+
+    <h3 class="hero__title" style="font-size: 2rem; margin-bottom: 0.5em;">What Personal Information do we collect?</h2>
+    <p style="font-size:2em;">
+    We collect and maintain different types of personal information about individuals with whom we interact, which is relevant for purposes that a reasonable person would consider appropriate for online checkouts (“online checkouts”).
+    
+    This includes:<br /><br />
+    Contact and identification information, such as the User’s name, address, telephone number and e-mail address; Financial information such as the User’s payment methods and preferences, billing and banking information (credit card number and expiry date); Product and service related information concerning the sale of online checkouts and other products or services that are provided to the User; Other personal information used for purposes that a reasonable person would consider appropriate in light of the circumstances.
+    <br /><br />
+    As a general rule, Ongair collects the User’s personal information directly from the User and will generally not collect personal information about the User from a third party without such User’s consent. A User may have given such consent directly to Ongair or to the third party dealing directly with Ongair.<br />    
+    </p>
+    <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Consent</h2>
+    <p style="font-size:2em;">
+    It is important to Ongair that it only collects, uses or discloses the User’s personal information which is
+    not publicly available, where we have the User’s consent to do so. Depending on the sensitivity of the personal information, the User’s consent may be implied, deemed (using an opt-out mechanism) or express. Express consent can be given orally, electronically or in writing. Implied consent is consent
+    that can reasonably be inferred from the User’s action or inaction.
+    
+    </p>
+    <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Updating Personal Information</h2>
+    <p style="font-size:2em;">
+    Since Ongair uses the personal information to contact the User, it is important that the information contained in Ongair’s records is both accurate and current. If the User wishes to verify, correct or
+    update the personal information, or if the personal information happens to change during the course of the business relationship with Ongair, the User is responsible for keeping Ongair informed of such changes. The User is kindly requested to contact hello@ongair.im, to update any personal information.    
+    </p>
+    
+    <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Inquiries, concerns and requests for access</h2>
+    <p style="font-size:2em;">
+    If you have any questions about this Privacy Policy or would like to access your personal information, please contact the office. Please note that all requests to access personal information must be in writing or by e-mail.    
     </p>
 </div>
