Finished privacy policy

--- a/app/views/public/privacy.erb
+++ b/app/views/public/privacy.erb
@@ -17,11 +17,21 @@
     <br /><br />
     As a general rule, Ongair collects the User’s personal information directly from the User and will generally not collect personal information about the User from a third party without such User’s consent. A User may have given such consent directly to Ongair or to the third party dealing directly with Ongair.<br />    
     </p>
+    <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">How is the Personal Information protected?</h2>
+    <p style="font-size:2em;">
+    Ongair maintains physical, electronic and procedural safeguards that are appropriate to the sensitivity of personal information. These safeguards are designed to prevent the loss and unauthorized access, modification or disclosure of any personal information.
+    </p>
+
     <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Consent</h2>
     <p style="font-size:2em;">
     It is important to Ongair that it only collects, uses or discloses the User’s personal information which is
     not publicly available, where we have the User’s consent to do so. Depending on the sensitivity of the personal information, the User’s consent may be implied, deemed (using an opt-out mechanism) or express. Express consent can be given orally, electronically or in writing. Implied consent is consent
     that can reasonably be inferred from the User’s action or inaction.
+    
+    </p>
+    <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Choise / Opt-out</h2>
+    <p style="font-size:2em;">
+    Unless the User states otherwise, by receiving this Privacy Policy the User is deemed to have given consent to the collection, use and disclosure of personal information for the purposes explained in this Privacy Policy. If the User does not wish to have the personal information shared, the User should opt out as described above.
     
     </p>
     <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Updating Personal Information</h2>
@@ -34,4 +44,10 @@
     <p style="font-size:2em;">
     If you have any questions about this Privacy Policy or would like to access your personal information, please contact the office. Please note that all requests to access personal information must be in writing or by e-mail.    
     </p>
+    
+    <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Revisions to this Privacy Policy</h2>
+    <p style="font-size:2em;">
+    Ongair may from time to time make changes to this Privacy Policy to reflect changes in its legal or regulatory obligations or enhancements to the manner in which we deal with your personal information. We will post any revised version of this Privacy Policy on our website, and we encourage you to refer back to it on a regular basis. Any changes to this Privacy Policy will be effective and binding from the time they are posted.
+    </p>
+    <p style="font-size:2em;"><br />This policy was last updated on 1st February 2022</p>
 </div>
