--- a/app/views/public/terms.erb
+++ b/app/views/public/terms.erb
@@ -48,6 +48,24 @@
     any Ongair User at its discretion. User shall be responsible for maintaining the confidentiality of User's
     Ongair password and other account information.
     </p>
+    
+    <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Copyright</h2>
+    <p style="font-size:2em;">
+    All content included on the Website, such as text, graphics, logos, button icons, images, audio clips,
+    digital downloads, data compilations, and software, is the property of Ongair or its content suppliers
+    and protected by international copyright laws. The compilation of all content on the Website is the
+    exclusive property of Ongair and protected by international copyright laws. All software used on (or
+    provided through) the Website is the property of Ongair or its software suppliers and protected by
+    international copyright laws.
+    </p>
+    
+    <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Indemnity</h2>
+    <p style="font-size:2em;">
+    The User indemnifies and holds harmless Ongair, its contractors, and its licensors, and their respective
+    directors, officers, employees and agents from and against any and all claims and expenses, including
+    attorneys' fees, arising out of the use of the Website, including but not limited to the User’s violation
+    these terms.
+    </p>
 
     <h3 class="hero__title" style="font-size: 2rem; margin-top: 0.5em; margin-bottom: 0.5em;">Termination</h2>
     <p style="font-size:2em;">
@@ -73,5 +91,8 @@
 							pursuant to these terms and conditions. Any assignment in violation of this Section will be void. These
 							terms and conditions will be binding upon permitted assignees. These terms will inure to the benefit
 							of and be binding upon the Parties, their permitted successors and permitted assignees.
+    </p>
+    <p style="font-size:2em;">
+    These Terms & Conditions were last updated on 21st August 2022.
     </p>
 </div>
